--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </div>
     </div>
 
-    <script src="http://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
     <script src="js/boxBackground.js"></script>
     <script src="js/buttonBehavior.js"></script>
 </body>
